# trading_r1

./: .gitignore  README.md  __init__.py  __main__.py  pyproject.toml  train.sh  train_sbatch.sh
configs/: backtest.yaml  data.yaml  distill.yaml  infer.yaml  labels.yaml  train_stage1_grpo.yaml  train_stage1_sft.yaml  train_stage2_grpo.yaml  train_stage2_sft.yaml  train_stage3_grpo.yaml  train_stage3_sft.yaml
src/trading_r1/: __init__.py  actions.py  cli.py  config.py  schemas.py  splits.py
src/trading_r1/data/: __init__.py  build_samples.py  collect_fundamentals.py  collect_news.py  collect_price.py
src/trading_r1/distill/: __init__.py  reverse_planner.py  teacher_frontend.py  trace_stitcher.py
src/trading_r1/eval/: __init__.py  backtest.py  inference.py  metrics.py
src/trading_r1/labels/: volatility_labels.py
src/trading_r1/parsing/: __init__.py  decision_parser.py  xml_parser.py
src/trading_r1/reward/: __init__.py  aggregate.py  decision_reward.py  evidence_reward.py  structure_reward.py
src/trading_r1/train/: __init__.py  checkpointing.py  grpo.py  runtime.py  sft.py
src/trading_r1/utils/: chat_format.py  io.py
tests/: test_chat_format.py  test_checkpointing.py  test_grpo_resume.py  test_integration_pipeline.py  test_labels.py  test_parsing_and_rewards.py  test_sft_resume.py  test_teacher_frontend_hf.py  test_training_runtime.py
